added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,43 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Child elements are nested within parent elements</li>
+          <li>Head elements are usually not seen by people looking at the web page</li>
+          <li>Within the body it is important to order and nest things neatly so that the finished web page is visually clear</li>
+          <li>Elements are opened and closed with 'tags'</li>
+          <li>The opening tag is held within angle brackets</li>
+          <li>The closing tag is the same as the opening tag, with a forward slash just inside the left angle bracket</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git bash is where you enter code on your desktop</li>
+          <li>git hub is an online resource to share and collaborate on code</li>
+          <li>cd: change directory one folder at a time</li>
+          <li>cd ..: go back one folder at a time</li>
+        </ul>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
+
     </main>
 
     <footer>
