added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -28,7 +29,12 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element</li>
+          <li>A padding indicates how much space we want around the content iside an element</li>
+          <li>CSS code adds style to the HTML code that builds a webpage</li>
+          <li>CSS code can be added directly into HTML code, but this can be difficult to edit</li>
+          <li>A separate 'style guide' can be built in CSS allowing changes to be made more easily</li>
+          <li>Separate CSS code must be linked into the HTML code to be applied</li>
         </ul>
       </section>
       <section class="card" id="git-section">
