--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>The code is always read from top to bottom, so it is important to keep elements in the right order</li>
+          <li>JavaScript allows users to interact with programs</li>
+          <li>conditional statements run a set of code if defined conditions are met</li>
+          <li>Functions are sets of code that are run when they are called within the program</li>
+          <li>An array holds a set of information</li>
+          <li>In JavaScript, items within an array are numbered starting with zero</li>
         </ul>
       </section>
 
